Update image path to banner

--- a/scss/preset/var_00.scss
+++ b/scss/preset/var_00.scss
@@ -70,7 +70,7 @@ $navdrawer-bgcolor: $gray-800 !default;
 /*########### EDIT LOGOS AND BACKGROUND IMAGES HERE ###########*/
 $nav-fractal: url([[pix:theme|NavFractal-01]]); // Background image in Pix directory
 $site-logo: url([[pix:theme|CG_logo_RGB-01]]); // Site Logo image in Pix directory
-$header-bgimage: url([[pix:theme|CG_Banner_01a]]); // Background image in Pix directory
+$header-bgimage: url([[pix:theme|CG_Banner_01]]); // Background image in Pix directory
 $header-overlay: url([[pix:theme|CG_logo_RGB-03]]); // Background overlay in Pix directory
 
 
